# auto-assign

./: .gitignore  README.md  pyproject.toml
src/cbs/: __init__.py  model.py
tests/cbs/: test_model.py
